...
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="Location Name Placeholder"
                tools:text="Blahblahpoort 123, 1234 AB, LongCityName, TheCountry" />

            <TextView
                android:id="@+id/history_item_location_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Extra data"
                android:textColor="?attr/colorOutline"
                android:textSize="12sp"
                android:visibility="gone"
...
